@@ -11,6 +11,7 @@ Changes
 09/02/16 r239 Updated GeoIP.dat
 
 Fixes
+09/02/25 r255 Fixed segfault on missing chan +f parameter in ircd message
 09/02/23 r253 [2] Patch fixing some memleaks
 09/02/22 r250 Added missing AWAY message handling in inspircd11
 09/02/22 r247 Fixed sending broken CAPAB message to Plexus3
